--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
-    tools:context="com.example.eastsound.remourasystem.BlankFragmentB">
+    tools:context=".viewHolder.BlankFragmentB">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
