--- a/app/src/main/res/layout/menu_order.xml
+++ b/app/src/main/res/layout/menu_order.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#bdcc5c00"
-    tools:context="com.example.eastsound.remourasystem.BlankFragmentA">
+    tools:context="com.example.eastsound.remourasystem.viewHolder.MainPager">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="5dp"
-                tools:context=".MainActivity">
+                tools:context=".viewHolder.LogIn">
 
                 <LinearLayout
                     android:layout_width="match_parent"
