--- a/app/src/main/res/layout/notifications_layout.xml
+++ b/app/src/main/res/layout/notifications_layout.xml
@@ -5,6 +5,12 @@
     android:background="@color/backgroundColor"
     tools:context=".NotificationFragment">
 
+   <ImageView
+       android:id="@+id/background"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:scaleType="fitXY"/>
+
    <android.support.v7.widget.RecyclerView
        android:id="@+id/notificationRV"
        android:layout_width="match_parent"
