--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -4,45 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
-    android:background="@color/backgroundColor"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".LogIn"
+    android:background="@color/backgroundColor"
     android:theme="@style/AppTheme">
 
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_margin="25dp"
-            android:layout_gravity="center"
-            android:src="@drawable/logo"/>
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="150dp"
+                android:layout_height="250dp"
+                android:layout_margin="25dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center"
+                />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/userName"
             android:hint="User Name"
-            android:textSize="22sp"
-            android:layout_marginBottom="10dp"
+            android:textSize="16sp"
             android:maxLines="1"
+            android:padding="7dp"
+            android:textColorHint="#a4a0a0"
+            android:background="@drawable/username_edittext_bg"
             android:singleLine="true"
             />
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#a4a0a0"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/password"
             android:hint="Password"
-            android:textSize="22sp"
+            android:textColorHint="#a4a0a0"
+            android:textSize="16sp"
+            android:background="@drawable/password_edittext_bg"
+            android:padding="7dp"
             android:inputType="textPassword"
             android:layout_marginBottom="10dp"
             android:maxLines="1"
@@ -55,9 +69,13 @@
             android:text="Login"
             android:textSize="22sp"
             android:layout_gravity="center"
-            android:padding="15dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
             android:layout_marginTop="10dp"
-            android:background="@color/backgroundColor"
+            android:textColor="#FDBB2F"
+            android:background="@drawable/login_button_bg"
             android:onClick="logIn"
             />
 
