--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,7 +12,8 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mealText">
+        android:background=""
+        >
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -23,11 +24,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
+
+
 
 </LinearLayout>
