--- a/app/src/main/res/layout/menu_order.xml
+++ b/app/src/main/res/layout/menu_order.xml
@@ -6,6 +6,12 @@
     android:background="#bdcc5c00"
     tools:context=".MainPager">
 
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
